--- a/mingw-w64-rust/config.toml
+++ b/mingw-w64-rust/config.toml
@@ -14,6 +14,7 @@ host = ["$OSTYPE"]
 target = [
   "$OSTYPE",
 ]
+build-dir = "build-$MSYSTEM"
 python = "$MINGW_PREFIX/bin/python.exe"
 locked-deps = true
 vendor = true
