--- a/mingw-w64-python-pytest-rerunfailures/PKGBUILD
+++ b/mingw-w64-python-pytest-rerunfailures/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=pytest-rerunfailures
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=14.0
-pkgrel=2
+pkgver=15.0
+pkgrel=1
 pkgdesc="a pytest plugin that re-runs failed tests up to -n times to eliminate flakey failures (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,22 +24,18 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('4a400bcbcd3c7a4ad151ab8afac123d90eca3abe27f98725dc4d9702887d2e92')
-
-prepare() {
-  rm -rf build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "build-${MSYSTEM}"
-}
+sha256sums=('2d9ac7baf59f4c13ac730b47f6fa80e755d1ba0581da45ce30b72fb3542b4474')
 
 build() {
-  cd "build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
+  cd "python-build-${MSYSTEM}"
+
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
