--- a/mingw-w64-libical/PKGBUILD
+++ b/mingw-w64-libical/PKGBUILD
@@ -6,15 +6,16 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 provides=(${MINGW_PACKAGE_PREFIX}-${_realname}-lib)
 conflicts=(${MINGW_PACKAGE_PREFIX}-${_realname}-glib)
 replaces=(${MINGW_PACKAGE_PREFIX}-${_realname}-glib)
-pkgver=3.0.18
-pkgrel=3
+pkgver=3.0.19
+pkgrel=1
 pkgdesc="An Open Source implementation of the iCalendar protocols and protocol data units (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
-url="https://github.com/libical/libical"
 msys2_references=(
   "cpe: cpe:/a:libical_project:libical"
 )
+msys2_repository_url='https://github.com/libical/libical'
+url='https://libical.github.io/libical/'
 license=("spdx:MPL-2.0 OR LGPL-2.1-only")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
@@ -32,7 +33,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 source=(https://github.com/${_realname}/${_realname}/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz
         001-win.patch)
 noextract=(${_realname}-${pkgver}.tar.gz)
-sha256sums=('72b7dc1a5937533aee5a2baefc990983b66b141dd80d43b51f80aced4aae219c'
+sha256sums=('6a1e7f0f50a399cbad826bcc286ce10d7151f3df7cc103f641de15160523c73f'
             'cf6d15035ca51aba5d84f2714e5fc8f7ae5b066bbb8e6b4b7d3a4f0af583f864')
 
 prepare() {
