--- a/mingw-w64-python-jsonschema-specifications/PKGBUILD
+++ b/mingw-w64-python-jsonschema-specifications/PKGBUILD
@@ -3,15 +3,16 @@
 _realname=jsonschema-specifications
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2023.12.1
-pkgrel=2
+pkgver=2024.10.1
+pkgrel=1
 pkgdesc='The JSON Schema meta-schemas and vocabularies, exposed as a Registry (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/python-jsonschema/jsonschema-specifications"
 msys2_references=(
   'pypi: jsonschema-specifications'
 )
+msys2_repository_url='https://github.com/python-jsonschema/jsonschema-specifications'
+url='https://jsonschema-specifications.readthedocs.io/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-referencing")
@@ -21,16 +22,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('48a76787b3e70f5ed53f1160d2b81f586e4ca6d1548c5de7085d1682674764cc')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('0f38b83639958ce1152d02a7f062902c41c8fd20d558b0c34344292d417ae272')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
