python-pytest-cov: update to 6.0.0

--- a/mingw-w64-python-pytest-cov/PKGBUILD
+++ b/mingw-w64-python-pytest-cov/PKGBUILD
@@ -3,12 +3,12 @@
 _realname=pytest-cov
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=5.0.0
-pkgrel=2
+pkgver=6.0.0
+pkgrel=1
 pkgdesc="py.test plugin for coverage reporting with support for both centralised and distributed testing, including subprocesses and multiprocessing (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/schlamar/pytest-cov'
+url='https://github.com/pytest-dev/pytest-cov'
 msys2_references=(
   'pypi: pytest-cov'
 )
@@ -25,16 +25,10 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-virtualenv"
 #              "${MINGW_PACKAGE_PREFIX}-python-fields"
 )
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('5837b58e9f6ebd335b0f8060eecce69b662415b16dc503883a02f45dfeb14857')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('fde0b595ca248bb8e2d76f020b465f3b107c9632e6a1d1705f17834c89dcadc0')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
