--- a/mingw-w64-libfilezilla/PKGBUILD
+++ b/mingw-w64-libfilezilla/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libfilezilla
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.48.1
+pkgver=0.49.0
 pkgrel=1
 pkgdesc="Small and modern C++ library, offering some basic functionality to build high-performing, platform-independent programs (mingw-w64)"
 arch=('any')
@@ -22,8 +22,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gettext")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-cppunit")
 license=('spdx:GPL-2.0-or-later')
-source=("https://download.filezilla-project.org/${_realname}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('4eea8abd456096625893b707e8db6c949e6f0466136c51c0b8ce58b5f8ef1e43')
+# Upstream download link became (purposely) unstable
+# See https://trac.filezilla-project.org/ticket/13186
+#source=("https://download.filezilla-project.org/${_realname}/${_realname}-${pkgver}.tar.xz")
+source=("https://sources.archlinux.org/other/${_realname}/${_realname}-${pkgver}.tar.xz")
+sha256sums=('79ff30e5124068c116c8dc8fc4581922afa2d3720f7b6bee9c8f8fe419617488')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
