--- a/mingw-w64-filezilla/PKGBUILD
+++ b/mingw-w64-filezilla/PKGBUILD
@@ -4,7 +4,7 @@ _realname=FileZilla
 _wx_basever=3.2
 pkgbase=mingw-w64-filezilla
 pkgname=("${MINGW_PACKAGE_PREFIX}-filezilla")
-pkgver=3.67.1
+pkgver=3.68.1
 pkgrel=1
 pkgdesc="Fast and reliable FTP, FTPS and SFTP client (mingw-w64)"
 arch=('any')
@@ -27,10 +27,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-wxwidgets${_wx_basever}-msw")
-source=("https://download.filezilla-project.org/client/${_realname}_${pkgver}_src.tar.xz"
+# Upstream download link became (purposely) unstable
+# See https://trac.filezilla-project.org/ticket/13186
+#source=("https://download.filezilla-project.org/client/${_realname}_${pkgver}_src.tar.xz"
+source=("https://sources.archlinux.org/other/${_realname,,}/${_realname,,}-${pkgver}.tar.xz"
         "0002-fix-mingw-compiler-detection.patch"
         "0003-fix-build.patch")
-sha256sums=('10468e6ef623ad9789996df61f588ca7417d39353678313611d54f2d8131a1db'
+sha256sums=('9df9209e29564ad92bcdee4a8ebe0e07648ef473028cdbde160f3d0612517679'
             'b19da8c59e9010cd08034090a64348d30e2e9d14a8cefa87da994825197f58ba'
             'da8ba93395e82896cfa285d4379cec1ee0a18ae4389002c5964ff51e4a380bbf')
 
