--- a/mingw-w64-wezterm/PKGBUILD
+++ b/mingw-w64-wezterm/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _basever=20240203.110809.5046fc22
 pkgver=20240203.110809.5046fc22+r325+g30345b36d
-pkgrel=2
+pkgrel=3
 pkgdesc="A GPU-accelerated cross-platform terminal emulator and multiplexer (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64')
@@ -13,7 +13,7 @@ url="https://wezfurlong.org/wezterm/"
 msys2_repository_url='https://github.com/wez/wezterm'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
-         "${MINGW_PACKAGE_PREFIX}-libssh")
+         "${MINGW_PACKAGE_PREFIX}-libssh2")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-zstd"
@@ -36,6 +36,7 @@ prepare() {
   patch -Np1 -i "${srcdir}/mingw-build.patch"
 
   git submodule update --init --recursive
+  cargo update -p cc
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
