--- a/mingw-w64-zig/PKGBUILD
+++ b/mingw-w64-zig/PKGBUILD
@@ -3,7 +3,8 @@
 _realname=zig
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.13.0
+_pkgver=0.14.0-dev.2487+af89bb05d
+pkgver=${_pkgver/-/}
 pkgrel=1
 pkgdesc='A general-purpose programming language and toolchain for maintaining robust, optimal, and reusable software (mingw-w64)'
 arch=('any')
@@ -15,15 +16,16 @@ msys2_references=(
   'archlinux: zig'
 )
 license=('spdx:MIT')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+makedepends=("${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-lld")
 depends=("${MINGW_PACKAGE_PREFIX}-clang-libs"
          "${MINGW_PACKAGE_PREFIX}-llvm-libs"
+         "${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-zstd")
-source=("https://ziglang.org/download/${pkgver}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('06c73596beeccb71cc073805bdb9c0e05764128f16478fa53bf17dfabc1d4318')
+source=("https://ziglang.org/builds/${_realname}-${_pkgver}.tar.xz")
+sha256sums=('3f5143efa587a4146a428d9efaf729f0883241be5719c80c2665e502ea151040')
 
 build() {
   declare -a _extra_config
@@ -34,27 +36,29 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake \
+  cmake -Wno-dev \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-    -DZIG_PIE=ON \
+    -DCMAKE_C_COMPILER=clang \
+    -DCMAKE_CXX_COMPILER=clang++ \
+    -DZIG_HOST_TARGET_TRIPLE=x86_64-windows-gnu \
+    -DZIG_TARGET_TRIPLE=x86_64-windows-gnu \
     -DZIG_SHARED_LLVM=ON \
     -DZIG_STATIC_ZLIB=OFF \
     -DZIG_STATIC_ZSTD=OFF \
+    -DZIG_SYSTEM_LIBCXX=c++ \
     -DZIG_TARGET_MCPU=baseline \
     -DZIG_USE_LLVM_CONFIG=ON \
     "${_extra_config[@]}" \
-    -S ${_realname}-${pkgver} \
+    -S ${_realname}-${_pkgver} \
     -B build-${MSYSTEM}
 
-  ${MINGW_PREFIX}/bin/cmake --build build-${MSYSTEM}
+  cmake --build build-${MSYSTEM}
 }
 
 package() {
-  cd build-${MSYSTEM}
+  DESTDIR="${pkgdir}" cmake --install build-${MSYSTEM}
 
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
-
-  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+  install -Dm644 "${srcdir}"/${_realname}-${_pkgver}/LICENSE \
     "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
