--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -24,8 +24,19 @@ sha256sums=('3b0238ac400a7685fd0fc426d7efb7c01e5034c9c82b4a8ed71ebb018601b5f7'
             '23511257886b24a87943c2e6d46eeffb3af7bf6f75181a78db2ab33d345d8030'
             '8149f0f6d7e2bc42ebe417200875c42c79cab91935c56ed15cc9c14d19eedb89')
 
+prepare() {
+    cd "${srcdir}/${_realname}-${pkgver}"
+    
+    cp -f ${srcdir}/main.go" .
+    cp -f ${srcdir}/types_c.h" .
+}
+
 build() {
-    cd "${_realname}-${pkgver}"
+    cd "${srcdir}"
+    [[ -d build-${MINGW_CHOST} ]] && rm -rf build-${MINGW_CHOST}
+    mkdir -p build-${MINGW_CHOST}
+    cd build-${MINGW_CHOST}
+
     export GOPROXY=direct 
     export GOOS=windows
     export GOROOT=${MINGW_PREFIX}/lib/go
@@ -36,11 +47,11 @@ build() {
     export GO_LDFLAGS="-s -w"
     export GOFLAGS="-trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
     
-    go build -buildmode=c-shared -o libexcelize.dll main.go
+    go build -buildmode=c-shared -o libexcelize.dll ${_realname}-${pkgver}/main.go
 }
 
 package() {
-    cd "${_realname}-${pkgver}"
+    cd "build-${MINGW_CHOST}"
     install -Dm755 "libexcelize.dll" "${pkgdir}${MINGW_PREFIX}/bin/libexcelize.dll"
     install -Dm755 "libexcelize.h" "${pkgdir}${MINGW_PREFIX}/include/libexcelize.h"
     install -Dm644 "LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
