--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -19,22 +19,27 @@ makedepends=(${MINGW_PACKAGE_PREFIX}-cmake
 options=('!strip')
 source=("https://github.com/qax-os/excelize/archive/refs/tags/v${pkgver}.tar.gz"
         "main.go"
-        "types_c.h")
+        "types_c.h"
+        "go.mod"
+        "go.sum")
 sha256sums=('3b0238ac400a7685fd0fc426d7efb7c01e5034c9c82b4a8ed71ebb018601b5f7'
             '23511257886b24a87943c2e6d46eeffb3af7bf6f75181a78db2ab33d345d8030'
-            '8149f0f6d7e2bc42ebe417200875c42c79cab91935c56ed15cc9c14d19eedb89')
+            '8149f0f6d7e2bc42ebe417200875c42c79cab91935c56ed15cc9c14d19eedb89'
+            '46215080c349cf284be67c7a130ae5fbddbbcf0c54cbf2a552feb2fb22c05bf8'
+            '9df08f4b1c40cfcb4034cd01ec0020e4408f09c2731a83aeb78c6d227c9db620')
 
 prepare() {
     cd "${srcdir}"
-    
-    cp -f "${srcdir}/main.go" "${srcdir}/${_realname}-${pkgver}"
-    cp -f "${srcdir}/types_c.h" "${srcdir}/${_realname}-${pkgver}"
 }
 
 build() {
     cd "${srcdir}"
     [[ -d build-${MINGW_CHOST} ]] && rm -rf build-${MINGW_CHOST}
     mkdir -p build-${MINGW_CHOST}
+    cp -f "${srcdir}/main.go" "${srcdir}/build-${MINGW_CHOST}"
+    cp -f "${srcdir}/types_c.h" "${srcdir}/build-${MINGW_CHOST}"
+    cp -f "${srcdir}/go.mod" "${srcdir}/build-${MINGW_CHOST}"
+    cp -f "${srcdir}/go.sum" "${srcdir}/build-${MINGW_CHOST}"
     cd build-${MINGW_CHOST}
 
     export GOPROXY=direct 
