--- a/mingw-w64-libexcelize/excelize.pc.in
+++ b/mingw-w64-libexcelize/excelize.pc.in
@@ -10,4 +10,4 @@ Description: Library for reading and writing Microsoft Excel™ (XLAM / XLSM / X
 Version: 2.9.0
 Libs: -L${libdir} -lexcelize
 Libs.private: -lpthread
-Cflags: -I${includedir}
+Cflags: -I${includedir}/excelize
