--- a/mingw-w64-libexcelize/PKGBUILD
+++ b/mingw-w64-libexcelize/PKGBUILD
@@ -26,7 +26,7 @@ sha256sums=('700d0d6b0efbcb178cb3cb94f2328992a3da0746a3d97073a538b892ec3272ae'
             'd1d3b0321d163b6472ee9ff13ffe561c5e5af64c4ff9d1ec56abb7d9819b6386'
             '46215080c349cf284be67c7a130ae5fbddbbcf0c54cbf2a552feb2fb22c05bf8'
             '9df08f4b1c40cfcb4034cd01ec0020e4408f09c2731a83aeb78c6d227c9db620'
-            '742cbcf22bbbe1476b838f8bbcf67202aa6c9db40fcb4a0271d2c7a1b1f1b384')
+            'de7d640685c501c0b93726b272d7589b07df00dd22169d77071ff20eb56256f8')
 
 prepare() {
     cd "${srcdir}"
@@ -62,5 +62,6 @@ package() {
     install -Dm755 "excelize.dll" "${pkgdir}${MINGW_PREFIX}/bin/excelize.dll"
     install -Dm755 "excelize.a" "${pkgdir}${MINGW_PREFIX}/lib/excelize.a"
     install -Dm755 "excelize.pc" "${pkgdir}${MINGW_PREFIX}/lib/pkgconfig/excelize.pc"
-    install -Dm755 "excelize.h" "${pkgdir}${MINGW_PREFIX}/include/excelize.h"
+    install -Dm755 "excelize.h" "${pkgdir}${MINGW_PREFIX}/include/excelize/excelize.h"
+    install -Dm755 "types_c.h" "${pkgdir}${MINGW_PREFIX}/include/excelize/types_c.h"
 }
