python-flask-cors: update to 5.0.0

--- a/mingw-w64-python-flask-cors/PKGBUILD
+++ b/mingw-w64-python-flask-cors/PKGBUILD
@@ -4,16 +4,17 @@ _pyname=flask_cors
 _realname=flask-cors
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.0.1
-pkgrel=2
+pkgver=5.0.0
+pkgrel=1
 pkgdesc='A Flask extension adding a decorator for CORS support (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/corydolphin/flask-cors"
 msys2_references=(
   'pypi: Flask-Cors'
   "cpe: cpe:/a:flask-cors_project:flask-cors"
 )
+msys2_repository_url='https://github.com/corydolphin/flask-cors'
+url='https://flask-cors.readthedocs.io/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-flask"
@@ -22,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('eeb69b342142fdbf4766ad99357a7f3876a2ceb77689dc10ff912aac06c389e4')
+sha256sums=('5aadb4b950c4e93745034594d9f3ea6591f734bb3662e16e255ffbf5e89c88ef')
 
 build() {
   cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
