python-flask: update to 3.1.0

--- a/mingw-w64-python-flask/PKGBUILD
+++ b/mingw-w64-python-flask/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=flask
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.0.2
-pkgrel=3
+pkgver=3.1.0
+pkgrel=1
 pkgdesc='Micro webdevelopment framework for Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,6 +12,7 @@ msys2_references=(
   'pypi: Flask'
   "cpe: cpe:/a:palletsprojects:flask"
 )
+msys2_repository_url='https://github.com/pallets/flask'
 url="https://flask.palletsprojects.com/"
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python-blinker"
@@ -25,7 +26,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('822c03f4b799204250a7ee84b1eddc40665395333973dfb9deebfe425fefcb7d')
+sha256sums=('5f873c5184c897c8d9d1b05df1e3d01b14910ce69607a117bd3277098a5836ac')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
@@ -43,5 +44,5 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.rst"
+  install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
 }
