python-netaddr: update to 1.3.0

--- a/mingw-w64-python-netaddr/PKGBUILD
+++ b/mingw-w64-python-netaddr/PKGBUILD
@@ -3,18 +3,16 @@
 _realname=netaddr
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.2.1
-pkgrel=3
+pkgver=1.3.0
+pkgrel=1
 pkgdesc="Pure Python network address representation and manipulation library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/drkjam/netaddr'
 msys2_references=(
   'pypi: netaddr'
 )
+msys2_repository_url='https://github.com/netaddr/netaddr'
+url='https://netaddr.readthedocs.io/'
 license=('spdx:BSD-3-Clause-Clear')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-ipython: netaddr interractive command support")
@@ -25,21 +23,16 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-cov")
 options=(!strip)
 source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('6eb8fedf0412c6d294d06885c110de945cf4d22d2b510d0404f4e06950857987')
+sha256sums=('5c3c3d9895b551b763779ba7db7a03487dc1f8e3b385af819af341ae9ef6e48a')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
   sed -r 's|#!/usr/bin/env python||g' -i netaddr/eui/ieee.py netaddr/ip/iana.py
-
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
-
+  }
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
