--- a/mingw-w64-python-quart/PKGBUILD
+++ b/mingw-w64-python-quart/PKGBUILD
@@ -3,14 +3,15 @@
 _realname=quart
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.19.6
-pkgrel=3
+pkgver=0.20.0
+pkgrel=1
 pkgdesc='A Python ASGI web microframework with the same API as Flask (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: Quart'
 )
+msys2_repository_url='https://github.com/pallets/quart/'
 url='https://quart.palletsprojects.com/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-hypercorn"
@@ -18,17 +19,16 @@ depends=("${MINGW_PACKAGE_PREFIX}-hypercorn"
          "${MINGW_PACKAGE_PREFIX}-python-blinker"
          "${MINGW_PACKAGE_PREFIX}-python-click"
          "${MINGW_PACKAGE_PREFIX}-python-flask"
-         "${MINGW_PACKAGE_PREFIX}-python-importlib-metadata"
          "${MINGW_PACKAGE_PREFIX}-python-itsdangerous"
          "${MINGW_PACKAGE_PREFIX}-python-jinja"
          "${MINGW_PACKAGE_PREFIX}-python-markupsafe"
          "${MINGW_PACKAGE_PREFIX}-python-werkzeug")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
-             "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
+             "${MINGW_PACKAGE_PREFIX}-python-flit-core"
+             "${MINGW_PACKAGE_PREFIX}-python-installer")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('89ddda6da24300a5ea4f21e4582d5e89bc8ea678e724e0b747767143401e4558')
+sha256sums=('08793c206ff832483586f5ae47018c7e40bdd75d886fee3fabbdaa70c2cf505d')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
@@ -40,6 +40,4 @@ package() {
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
-
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
