python-termcolor: update to 2.5.0

--- a/mingw-w64-python-termcolor/PKGBUILD
+++ b/mingw-w64-python-termcolor/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=termcolor
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.4.0
-pkgrel=2
+pkgver=2.5.0
+pkgrel=1
 pkgdesc='ANSII Color formatting for output in terminal (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,8 +19,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-hatchling"
              "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs")
-source=(https://pypi.python.org/packages/source/t/termcolor/termcolor-$pkgver.tar.gz)
-sha256sums=('aab9e56047c8ac41ed798fa36d892a37aca6b3e9159f3e0c24bc64a9b3ac7b7a')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('998d8d27da6d48442e8e1f016119076b690d962507531df4890fcd2db2ef8a6f')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
